chore(api): fix the OpenAPI schema to match the actual responses
It also changes uint64 format to int64 format (this is because OpenAPI 3.1.0 does not specify unsigned format for integer, and the rust generator will just ignore it otherwise)
